[tool.poetry]
name = "number-extract"
version = "0.1.0"
description = ""
authors = ["HishamKhalil1990 <hisham.khalil1990@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^3.9.2"
pytest = "^6.2.4"
pytesseract = "^0.3.8"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
